--- a/aboutme/css/style.scss
+++ b/aboutme/css/style.scss
@@ -38,10 +38,21 @@
     }
 }
 .slide{
+    h2{
+        margin: 100px 0;
+        font-size: 50px;
+        text-align: center;
+        line-height: 60px;
+    }
     h3{
         text-align: center;
         height: 40px;
         line-height: 30px;
+    }
+    h4{
+        font-size: 27px;
+        margin: 10px 0;
+        font-weight: 700;
     }
     .mod_con{
         .pic_con{
@@ -51,6 +62,12 @@
                 overflow: hidden;
                 border: 2px solid #666;
                 box-shadow: 2px 2px 1px #888888;   
+            }
+        }
+        ul{
+            list-style: inherit;
+            li{
+                font-size: 24px;
             }
         }
     }
