--- a/aboutme/css/style.scss
+++ b/aboutme/css/style.scss
@@ -54,6 +54,9 @@
         margin: 10px 0;
         font-weight: 700;
     }
+    a{
+        text-decoration: underline;
+    }
     .mod_con{
         .pic_con{
             text-align: center;
